# INDI-omnia

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ConnectionBar.qml  DeviceList.qml  LogBox.qml  Page1.qml  README.md  Version.h.in  indiomnia.pro  main.cpp  main.qml  qml.qrc
.circleci/: config.yml
android/: AndroidManifest.xml  Version.h  config.h  gradle.properties  indiomnia.pro  indiversion.h  local.properties
common/: CMakeLists.txt  Device.cpp  Device.hpp  DeviceModel.cpp  DeviceModel.hpp  DeviceModelFacade.cpp  DeviceModelFacade.hpp  IndiClient.cpp  IndiClient.hpp  IndiConnection.cpp  IndiConnection.hpp  LogFilterModel.cpp  LogFilterModel.hpp  LogModel.cpp  LogModel.hpp
common/test/: CMakeLists.txt  TestDeviceModel.cpp  TestDeviceModel.hpp  TestDeviceModelFacade.cpp  TestDeviceModelFacade.hpp  TestIndiClient.cpp  TestIndiClient.hpp  TestIndiConnection.cpp  TestIndiConnection.hpp
installer/: CMakeLists.txt
qml/: CMakeLists.txt  ConnectionBar.qml  DeviceList.qml  LogBox.qml  main.qml
resources/: CMakeLists.txt  resources.qrc
